Bug fix: wrong image ratio on safari

--- a/styles.css
+++ b/styles.css
@@ -95,9 +95,9 @@ nav img {
 }
 
 .project-img {
-  max-width: 100%;
+  width: 100%;
+  height: auto;
   border-radius: 8px;
-  height: fit-content;
   opacity: 1;
   transition: 0.3s;
 }
